fixing security and fixing login, register components